--- a/src/app/demo/flexbox/flexbox.component.css
+++ b/src/app/demo/flexbox/flexbox.component.css
@@ -1,11 +1,18 @@
 .flex-container{
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-around;
 }
 
+@media all and (max-width: 800px){
+    .flex-container{
+        justify-content: flex-start;
+    }
+}
 .flex-item{
-    
-    flex-grow: 1;
+    width: 200px;
+    height: 150px;
+    margin-top: 10px;
     background: tomato;
     color: white;
     font-weight: bold;
