--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -2,11 +2,11 @@
   <mat-sidenav #sidenav [mode]="isScreenSmall() ? 'over' : 'side'" [opened]="!isScreenSmall()"
     (opened)="events.push('open!')" (closed)="events.push('close!')" class="app-sidenav mat-elevation-z10">
     <mat-toolbar color="primary">Contacts</mat-toolbar>
-    <mat-list role="list">
-      <mat-list-item role="listitem">Item 1</mat-list-item>
-      <mat-list-item role="listitem">Item 2</mat-list-item>
-      <mat-list-item role="listitem">Item 3</mat-list-item>
-    </mat-list>
+    <mat-nav-list>
+        <mat-list-item *ngFor="let user of users | async">
+           <a matLine href="#">{{ user.name }}</a>
+        </mat-list-item>
+      </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content class="app-sidenav-content ">
