--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -4,7 +4,7 @@
     <mat-toolbar color="primary">Contacts</mat-toolbar>
     <mat-nav-list>
         <mat-list-item *ngFor="let user of users | async">
-           <a matLine href="#">{{ user.name }}</a>
+           <a matLine href="#"><mat-icon svgIcon="{{user.avatar}}"></mat-icon> {{ user.name }}</a>
         </mat-list-item>
       </mat-nav-list>
   </mat-sidenav>
