user contact card

--- a/src/app/contactmanager/components/main-content/main-content.component.html
+++ b/src/app/contactmanager/components/main-content/main-content.component.html
@@ -1,4 +1,21 @@
-<mat-card>
-  <h1>Simple card</h1>
-</mat-card>
-
+<div *ngIf="!user">
+  <mat-spinner></mat-spinner>
+</div>
+<div *ngIf="user">
+  <mat-card>
+    <mat-card-header>
+      <div mat-card-avatar>
+        <mat-icon svgIcon="{{user.avatar}}"></mat-icon>
+      </div>
+      <mat-card-title>
+        <h2>{{user.name}}</h2>
+      </mat-card-title>
+      <mat-card-subtitle>{{user.birthdate | date: 'd LLLL'}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        {{user.bio}}
+      </p>
+    </mat-card-content>
+  </mat-card>
+</div>
