--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -1,10 +1,10 @@
 <mat-sidenav-container class="app-sidenav-container">
   <mat-sidenav #sidenav [mode]="isScreenSmall() ? 'over' : 'side'" [opened]="!isScreenSmall()"
-    (opened)="events.push('open!')" (closed)="events.push('close!')" class="app-sidenav mat-elevation-z10">
+    class="app-sidenav mat-elevation-z10">
     <mat-toolbar color="primary">Contacts</mat-toolbar>
     <mat-nav-list>
         <mat-list-item *ngFor="let user of users | async">
-           <a matLine href="#"><mat-icon svgIcon="{{user.avatar}}"></mat-icon> {{ user.name }}</a>
+           <a matLine [routerLink]="['/contactmanager', user.id]" routerLinkActive="router-link-active"><mat-icon svgIcon="{{user.avatar}}"></mat-icon> {{ user.name }}</a>
         </mat-list-item>
       </mat-nav-list>
   </mat-sidenav>
