--- a/src/app/contactmanager/components/main-content/main-content.component.html
+++ b/src/app/contactmanager/components/main-content/main-content.component.html
@@ -10,12 +10,18 @@
       <mat-card-title>
         <h2>{{user.name}}</h2>
       </mat-card-title>
-      <mat-card-subtitle>{{user.birthdate | date: 'd LLLL'}}</mat-card-subtitle>
+      <mat-card-subtitle>Birthday {{user.birthDate | date: 'd LLLL'}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <p>
-        {{user.bio}}
-      </p>
+      <mat-tab-group>
+        <mat-tab label="Bio">
+          <p>
+            {{user.bio}}
+          </p> 
+        </mat-tab>
+        <!-- <mat-tab label="Notes"> Content 2 </mat-tab> -->
+      </mat-tab-group>
+
     </mat-card-content>
   </mat-card>
 </div>
