--- a/src/app/contactmanager/components/notes/notes.component.html
+++ b/src/app/contactmanager/components/notes/notes.component.html
@@ -1,3 +1,4 @@
+<div class="mat-elevation-z8">
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <ng-container matColumnDef="position">
@@ -19,4 +20,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   
-  
+  <mat-paginator [pageSizeOptions]="[1, 2, 5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
