--- a/src/app/contactmanager/components/notes/notes.component.html
+++ b/src/app/contactmanager/components/notes/notes.component.html
@@ -2,21 +2,21 @@
   <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
   </mat-form-field>
-  
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+    <ng-container matColumnDef="id">
+      <th mat-sort-header mat-header-cell *matHeaderCellDef> No. </th>
       <td mat-cell *matCellDef="let note"> {{note.id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> Title </th>
+      <th mat-sort-header mat-header-cell *matHeaderCellDef> Title </th>
       <td mat-cell *matCellDef="let note"> {{note.title}} </td>
     </ng-container>
 
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <th mat-sort-header mat-header-cell *matHeaderCellDef> Date </th>
       <td mat-cell *matCellDef="let note"> {{note.date | date: 'yyyy-MM-dd'}} </td>
     </ng-container>
 
