--- a/src/app/contactmanager/components/toolbar/toolbar.component.html
+++ b/src/app/contactmanager/components/toolbar/toolbar.component.html
@@ -1,6 +1,18 @@
-<mat-toolbar color = "primary">
-<button class="sidenav-toggle" mat-button (click) = "toggleSidenav.emit()">
-    <mat-icon>menu</mat-icon>
-</button>
-Contact Manager
+<mat-toolbar color="primary">
+
+    <button class="sidenav-toggle" mat-button (click)="toggleSidenav.emit()">
+        <mat-icon>menu</mat-icon>
+    </button>
+
+    Contact Manager
+
+    <span fxFlex></span>
+
+    <button mat-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item>New Contact</button>
+    </mat-menu>
+
+    
+
 </mat-toolbar>
