--- a/src/app/contactmanager/components/toolbar/toolbar.component.html
+++ b/src/app/contactmanager/components/toolbar/toolbar.component.html
@@ -10,7 +10,7 @@
 
     <button mat-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
     <mat-menu #menu="matMenu">
-        <button mat-menu-item>New Contact</button>
+        <button mat-menu-item (click)="openAddContactDialog()">New Contact</button>
     </mat-menu>
 
     
