--- a/src/app/contactmanager/components/toolbar/toolbar.component.html
+++ b/src/app/contactmanager/components/toolbar/toolbar.component.html
@@ -11,6 +11,8 @@
     <button mat-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
     <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="openAddContactDialog()">New Contact</button>
+        <button mat-menu-item (click)="toggleTheme.emit()">Toggle theme</button>
+        <button mat-menu-item (click)="toggleDirection.emit()">Toggle direction</button>
     </mat-menu>
 
     
